--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,130 @@ table {
   display: table;
   clear: both;
 }
+
+body {
+  background: #EDECE4;
+  border: 10px solid #CBC6B9;
+  color: #2A2426;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  body {
+    border: none;
+  }
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+p {
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+}
+
+.titulo {
+  text-transform: uppercase;
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .titulo {
+    margin-bottom: 40px;
+  }
+}
+
+.titulo::after {
+  content: '';
+  display: block;
+  width: 75%;
+  float: right;
+  height: 2px;
+  background: #2A2426;
+  margin-top: 13px;
+}
+
+@media only screen and (min-width: 760px) and (max-width: 1199px) {
+  .titulo::after {
+    width: 60%;
+  }
+}
+
+.intro {
+  margin-top: 60px;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .intro {
+    margin-top: 20px;
+  }
+}
+
+.logo {
+  margin: 60px 0;
+}
+
+.intro-info {
+  border-right: 2px solid #2A2426;
+  max-width: 320px;
+}
+
+.intro-info p {
+  padding-top: 10px;
+}
+
+.intro-info p:first-child {
+  border-bottom: 2px solid #2A2426;
+  padding-bottom: 10px;
+}
+
+.intro-telefone {
+  color: #988C77;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .intro-telefone {
+    margin-bottom: 40px;
+  }
+}
+
+.intro-telefone::after {
+  content: '/ / / /';
+  display: block;
+  margin-top: 200px;
+  font-size: 13.75em;
+  letter-spacing: -0.40909em;
+  color: #2A2426;
+}
+
+@media only screen and (min-width: 760px) and (max-width: 1199px) {
+  .intro-telefone::after {
+    font-size: 10em;
+    margin-top: 0.5em;
+    letter-spacing: -0.4375em;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .intro-telefone::after {
+    display: none;
+  }
+}
+
+.aberto {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: #1AB912;
+  border-radius: 50%;
+  margin-left: 30px;
+}
+
+.intro-foto {
+  width: 100%;
+  border: 10px solid #CBC6B9;
+}
