--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,5 +1,11 @@
+// Config
 @import "reset";
 @import "grid";
 @import "vars-e-mixins";
+
+// Pagina
 @import "geral";
 @import "intro";
+@import "menu";
+@import "contato";
+@import "footer";
