--- a/css/scss/_vars-e-mixins.scss
+++ b/css/scss/_vars-e-mixins.scss
@@ -32,3 +32,9 @@ $fonte-2: 'Aref Ruqaa', serif;
     line-height: em(30, 24);
   }
 }
+
+@mixin box-shadow($shadow...) {
+  -webkit-box-shadow: $shadow;
+  -moz-box-shadow: $shadow;
+  box-shadow: $shadow;
+}
