--- a/css/style.css
+++ b/css/style.css
@@ -347,3 +347,255 @@ p {
   width: 100%;
   border: 10px solid #CBC6B9;
 }
+
+.menu {
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .menu {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+.menu-item {
+  margin-bottom: 60px;
+}
+
+.menu-item h2 {
+  font-family: "Aref Ruqaa", serif;
+  font-size: 1.5em;
+  line-height: 1.25em;
+  margin-bottom: 1em;
+}
+
+.menu-item li {
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+  line-height: 1.94444em;
+}
+
+.menu-item li span {
+  display: inline-block;
+  width: 70px;
+  margin-right: 10px;
+  margin-left: -80px;
+  font-family: "Aref Ruqaa", serif;
+  text-align: right;
+  color: #988C77;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .menu-item li span {
+    margin-left: 0;
+    width: auto;
+  }
+}
+
+.menu-item img {
+  border-radius: 50%;
+  border: 10px solid #CBC6B9;
+  position: absolute;
+  right: 0;
+  margin-top: 45px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .menu-item img {
+    right: 120px;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .menu-item img {
+    margin-top: 90px;
+    width: 120px;
+  }
+}
+
+.contato {
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .contato {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+.contato form label {
+  display: block;
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+}
+
+.contato form input:not([type="button"]), .contato form textarea {
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+  color: #2A2426;
+  width: 100%;
+  height: 40px;
+  padding: 0 5px;
+  border: 2px solid #988C77;
+  background: transparent;
+  margin-bottom: 1em;
+}
+
+.contato form input:not([type="button"]):hover, .contato form input:not([type="button"]):focus, .contato form textarea:hover, .contato form textarea:focus {
+  outline: none;
+  border-color: #CBC6B9;
+}
+
+.contato form textarea {
+  height: 120px;
+}
+
+.contato form input[type="button"] {
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+  cursor: pointer;
+  color: #988C77;
+  text-transform: uppercase;
+  border: 2px solid #988C77;
+  background: transparent;
+  display: block;
+  width: 200px;
+  padding-top: 5px;
+  -webkit-box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988C77;
+  -moz-box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988C77;
+  box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988C77;
+  transition: .3s;
+}
+
+.contato form input[type="button"]:hover {
+  -webkit-box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988C77;
+  -moz-box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988C77;
+  box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988C77;
+}
+
+.contato-info {
+  display: inline-block;
+  color: #988C77;
+  margin-top: 2em;
+}
+
+@media only screen and (min-width: 1200px) {
+  .contato-info {
+    float: right;
+    text-align: right;
+    margin-top: -3em;
+    margin-bottom: 3em;
+  }
+}
+
+.contato-mapa {
+  display: block;
+  clear: both;
+  -webkit-box-shadow: 0 0 0 10px #CBC6B9;
+  -moz-box-shadow: 0 0 0 10px #CBC6B9;
+  box-shadow: 0 0 0 10px #CBC6B9;
+}
+
+.contato-mapa img {
+  width: 100%;
+}
+
+.contato {
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+
+@media only screen and (min-width: 480px) and (max-width: 759px) {
+  .contato {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+.contato form label {
+  display: block;
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+}
+
+.contato form input:not([type="button"]), .contato form textarea {
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+  color: #2A2426;
+  width: 100%;
+  height: 40px;
+  padding: 0 5px;
+  border: 2px solid #988C77;
+  background: transparent;
+  margin-bottom: 1em;
+}
+
+.contato form input:not([type="button"]):hover, .contato form input:not([type="button"]):focus, .contato form textarea:hover, .contato form textarea:focus {
+  outline: none;
+  border-color: #CBC6B9;
+}
+
+.contato form textarea {
+  height: 120px;
+}
+
+.contato form input[type="button"] {
+  font-family: "PT Mono", monospace;
+  font-size: 1.125em;
+  line-height: 1.66667em;
+  cursor: pointer;
+  color: #988C77;
+  text-transform: uppercase;
+  border: 2px solid #988C77;
+  background: transparent;
+  display: block;
+  width: 200px;
+  padding-top: 5px;
+  -webkit-box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988C77;
+  -moz-box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988C77;
+  box-shadow: 5px 5px 0 -2px #CBC6B9, 5px 5px 0 0 #988C77;
+  transition: .3s;
+}
+
+.contato form input[type="button"]:hover {
+  -webkit-box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988C77;
+  -moz-box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988C77;
+  box-shadow: 3px 3px 0 -2px #CBC6B9, 3px 3px 0 0 #988C77;
+}
+
+.contato-info {
+  display: inline-block;
+  color: #988C77;
+  margin-top: 2em;
+}
+
+@media only screen and (min-width: 1200px) {
+  .contato-info {
+    float: right;
+    text-align: right;
+    margin-top: -3em;
+    margin-bottom: 3em;
+  }
+}
+
+.contato-mapa {
+  display: block;
+  clear: both;
+  -webkit-box-shadow: 0 0 0 10px #CBC6B9;
+  -moz-box-shadow: 0 0 0 10px #CBC6B9;
+  box-shadow: 0 0 0 10px #CBC6B9;
+}
+
+.contato-mapa img {
+  width: 100%;
+}
