--- a/css/scss/_contato.scss
+++ b/css/scss/_contato.scss
@@ -75,10 +75,15 @@
 .contato-mapa {
   display: block;
   clear: both;
+  margin-top: 2em;
   
   @include box-shadow (
     0 0 0 10px $bege-medio
   );
+
+  @include d(l) {
+    margin-top: -2em;
+  }
 
   img {
     width: 100%;
